@@ -1,3 +1,8 @@
+2013-07-18  Jean-Louis Martineau <martineau@zmanda.com>
+	* device-src/s3.c: Undo previous patch.
+	* device-src/s3-device.c: Verify the bucket can be used as a subdomain
+	  if S3-SUBDOMAIN is set.
+
 2013-07-17  Jean-Louis Martineau <martineau@zmanda.com>
 	* device-src/s3.c: lowercase the bucket for the auth_string.
 
